# roft-yarp

./: CMakeLists.txt  README.md
realsense/: CMakeLists.txt
realsense/app/: roft_realsense.xml
realsense/app/conf/: config_realsense_720p.ini
realsense/src/: main.cpp
samples/: CMakeLists.txt
samples/grasp-data/: CMakeLists.txt
samples/grasp-data/include/: RankableCandidate.h
samples/grasp-data/thrift/: grasp_data.thrift
samples/grasp-viewer/: CMakeLists.txt
samples/grasp-viewer/app/conf/: config.ini
samples/grasp-viewer/include/: iCubGaze.h  module.h  viewer.h
samples/grasp-viewer/src/: iCubGaze.cpp  main.cpp  module.cpp  vtkUpdateHandler.cpp
samples/track-n-grasp/: CMakeLists.txt
samples/track-n-grasp/app/: roft-track-n-grasp.xml
samples/track-n-grasp/app/conf/: config.ini
samples/track-n-grasp/include/: Utils.h  cardinal_points_grasp.h  iCubCartesian.h  iCubGaze.h  iCubMotors.h  iCubMotorsPositions.h  module.h  viewer.h
samples/track-n-grasp/scripts/: roft-track-n-grasp-speech.lua
samples/track-n-grasp/src/: Utils.cpp  iCubCartesian.cpp  iCubGaze.cpp  iCubMotors.cpp  iCubMotorsPositions.cpp  main.cpp  module.cpp
samples/track-n-grasp/thrift/: idl.thrift
test_sources/: connect  viewer
test_sources/test_camera/: test_camera.py
test_sources/test_segmentation/: test_segmentation.py
tracker/: CMakeLists.txt
tracker/app/: roft.xml
tracker/app/conf/: config.ini
tracker/include/: probe_redball.h  tracker.h
tracker/src/: main.cpp  probe_redball.cpp  tracker.cpp
tracker/thrift/: idl.thrift
